Closed Bug 1056457 Opened 9 years ago Closed 9 years ago

[Text Selection] ###!!! ASSERTION: Bad mBatching: 'mBatching >=0',

Categories

(Core :: DOM: Selection, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla34

People

(Reporter: mtseng, Assigned: mtseng)

References

Details

Attachments

(1 file)

We hit this assertion when enable selection carets and select word by long tap.
We don't need batch changes anymore because gaia would filter all those selection change reasons correctly.
Attachment #8476441 - Flags: review?(roc)
I've verified on browser that the assertion is gone after applying this patch.
Nice! Thanks Ting-Yu.
ICS Mochitest-7 looks weird. Rebased and try again.

Latest try run: https://tbpl.mozilla.org/?tree=Try&rev=bae889a5fb0a
Looks good.
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/591bf545a597
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
You need to log in before you can comment on or make changes to this bug.