Bug 1056457 - Remove batch changes in selection carets. r=roc